--- a/gameStyle.css
+++ b/gameStyle.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', sans-serif';
+  font-family: Segoe UI , sans-serif;
 }
 
 body{
@@ -111,4 +111,67 @@ input:focus{
 #start-btn:hover{
   background-color: #c44c69;
   transform: scale(1.05);
+}
+
+/* game board */
+.game-board{
+  display: grid;
+  gap: 10px;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  
+}
+
+
+.card {
+  background-color: #ffffff;
+  width: 80px;
+  height: 100px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  cursor: pointer;
+  user-select: none;
+  transition: transform 0.3s;
+}
+
+.card.flipped {
+  background-color: #ffd700;
+}
+
+.hidden {
+  display: none;
+}
+
+header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.info-bar {
+  font-size: 16px;
+  color: #444;
+  margin-top: 10px;
+}
+
+.controls {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.controls button {
+  background-color: #c44c69;
+  color: white;
+  border: none;
+  padding: 10px 14px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+.controls button:hover {
+  background-color: #a73755;
 }
