add the photos , edit main, game pages , js code works well so far

--- a/gameStyle.css
+++ b/gameStyle.css
@@ -175,3 +175,10 @@ header {
 .controls button:hover {
   background-color: #a73755;
 }
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
